--- a/first_project/templates/base.html
+++ b/first_project/templates/base.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="de">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>{% block title %} My base title {% endblock %}</title>
 </head>
 <body>
-    Das ist ein Test!
+    
 </body>
 </html>
